some code smells; refs #20082